# trust-lens

./: .gitignore  FACE_RECOGNITION_GUIDE.md  README.md  bun.lockb  index.html  package.json  tailwind.config.ts  vite.config.ts
Trust-Lens-main/: package-lock.json
backend/: vercel.json
backend/factcheck_graph/: README.md  app.py  requirements.txt
src/: App.tsx  i18n.ts  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AnalysisResults.tsx  AuthWrapper.tsx  ChatInterface.tsx  Dashboard.tsx  DocumentUpload.tsx  EducationHub.tsx  FaceCapture.tsx  InsideChat.tsx  InsideDashboard.tsx  InsideDocuments.tsx  InsideFactCheck.tsx  InsideInfantry.tsx  InsideLearn.tsx  InsideProfile.tsx  InsideRebuild.tsx  InsideSettings.tsx  Login.tsx  MatrixBackground.tsx  MatrixEffect.tsx  MisinformationChecker.tsx  Navigation.tsx  ProfilePage.tsx  SettingsPage.tsx  SignUp.tsx  ThemeProvider.tsx  TrustScore.tsx  VisualBubbles.tsx
src/components/ui/: input.tsx  sheet.tsx  switch.tsx
src/locales/en/: translation.json
src/locales/es/: translation.json
src/locales/hi/: translation.json
src/pages/: AppLayout.tsx  Index.tsx  LoginPage.tsx  SignUpPage.tsx  Welcome.tsx
src/utils/: appData.ts  assistantApi.ts  externalServices.ts  faceApi.ts  faceUtils.ts  factcheckGraphApi.ts  forensicLab.ts  insideChatData.ts  insideData.ts  insideDocumentsData.ts  insideFactCheckData.ts  insideLearnData.ts  insideProfileData.ts  insideSettingsData.ts  nativePdfEngine.ts  realAnalysis.ts  sectionActionEvents.ts
