[package]
name = "trust-lens"
version = "0.0.1"
description = "A Trust Lens desktop application"
authors = ["You"]
license = ""
repository = ""
default-run = "trust-lens"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.10", features = [] }

[dependencies]
tauri = { version = "2.10", features = ["shell-open"] }
tauri-plugin-shell = { version = "2.1", features = ["open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
lopdf = "0.35"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
